--- a/style.css
+++ b/style.css
@@ -5,8 +5,8 @@
 
 
 .childDiv {
-width: 10px;
-height: 10px;
+width: 8px;
+height: 8px;
 border: 0px;
 background-color: red;
 }
@@ -15,11 +15,12 @@ background-color: red;
     display: flex;
     border:0px;
     flex-wrap: wrap;
-    width: 160px;
-    height: 160px;
+    width: 128px;
+    height: 128px;
+    margin-top: 50px;
+    
     
 }
-
 
 
 html,body{
@@ -32,6 +33,19 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: center ;
-    border: solid green;
+    margin: 0;
+    border: 0;
+    
+}
+
+button {
+    position: fixed;
+    top: 10px;
+    width: 100%;
+    height: 50px;
+    background-color: green;
+    border-color: black;
+    border-radius: 10px;
+    font-size: large;
     
 }
