--- a/style.css
+++ b/style.css
@@ -8,7 +8,8 @@
 width: 8px;
 height: 8px;
 border: 0px;
-background-color: red;
+background-color: black;
+opacity: 0.1;
 }
 
 #container {
@@ -43,7 +44,7 @@ button {
     top: 10px;
     width: 100%;
     height: 50px;
-    background-color: green;
+    background-color: gray;
     border-color: black;
     border-radius: 10px;
     font-size: large;
